# Haskell-Projects

./: .gitignore  README.md
Haskell/haskellwiki/state/: State.hs
Haskell/home-inventory-management/: home-inventory-management.cabal
Haskell/home-inventory-management/lib/: Types.hs
Haskell/home-inventory-management/src/: Main.hs
Haskell/markdown-to-html/: README.md  example.cabal  example.md
Haskell/markdown-to-html/lib/: Parser.hs  Test.hs  Types.hs
Haskell/markdown-to-html/src/: Main.hs
Haskell/my-website/: CHANGELOG.md  blogposts.txt  my-website.cabal  users.txt
Haskell/my-website/app/: Main.hs
Haskell/my-website/frontend/: index.html
Haskell/my-website/frontend/src/: Main.elm
Haskell/popcorn/: README.md  popcorn.cabal
Haskell/popcorn/frontend/src/: Main.elm
Haskell/popcorn/lib/: Types.hs
Haskell/popcorn/src/: Main.hs
Haskell/tree/: CHANGELOG.md  tree.cabal
Haskell/tree/app/: Main.hs
Haskell/tree/lib/: Types.hs
Haskell/triangle/: CHANGELOG.md  triangle.cabal
Haskell/triangle-website/: CHANGELOG.md  README.md  triangle-website.cabal
Haskell/triangle-website/app/: Main.hs
Haskell/triangle-website/frontend/: main.js
Haskell/triangle-website/frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo
Haskell/triangle-website/frontend/src/: Main.elm
Haskell/triangle-website/lib/: Triangle.hs
Haskell/triangle/src-lib/: MyLib.hs
Haskell/truth-table-generator/: README.md  argument.txt  truth-table-generator.cabal
Haskell/truth-table-generator/app/: Main.hs
Haskell/truth-table-generator/frontend/: cssStyles.css  index.html
Haskell/truth-table-generator/frontend/src/: Main.elm
Haskell/truth-table-generator/lib/: Evaluator.hs  Parser.hs  Types.hs
Haskell/weatherCLI/: CHANGELOG.md  weather-data.txt  weatherCLI.cabal
Haskell/weatherCLI/app/: Main.hs
Haskell/weatherCLI/lib/: Parser.hs  Types.hs
