cabal-version:   3.0
name:            example
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall -threaded

executable example
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
    build-depends:    base, 
                      megaparsec, 
                      parser-combinators,
                      doclayout

    hs-source-dirs:   src, lib
    default-language: Haskell2010
